<resources>
    <string name="app_name">NewsApp</string>
    // item_view strings
    <string name="section">Section</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="author">Author</string>

    <string name="noConnection">Sorry, no internet connection.</string>
    <string name="query">Please, enter your query here</string>
    <string name="no_data">No news found.</string>
    //Settings
    <string name="settings">Settings</string>
    <string name="filters_title">Filters</string>

    <string name="newest_label">Newest</string>
    <string name="newest" translatable="false">newest</string>
    <string name="oldest_label">Oldest</string>
    <string name="oldest" translatable="false">oldest</string>
    <string name="relevance_label">Relevance</string>
    <string name="relevance" translatable="false">relevance</string>

    <string name="filter_order_by_label">Order By</string>
    <string name="filter_order_by_key" translatable="false">order-by</string>
    <string name="filter_order_by_default" translatable="false">@string/relevance</string>

    <string name="news_ten_label">10</string>
    <string name="news_ten" translatable="false">10</string>
    <string name="news_twenty_label">20</string>
    <string name="news_twenty" translatable="false">20</string>
    <string name="news_thirty_label">30</string>
    <string name="news_thirty" translatable="false">30</string>
    <string name="news_forty_label">40</string>
    <string name="news_forty" translatable="false">40</string>
    <string name="news_fifty_label">50</string>
    <string name="news_fifty" translatable="false">50</string>

    <string name="news_per_page_label">News Per Page</string>
    <string name="news_per_page_key" translatable="false">page-size</string>
    <string name="news_per_page_default" translatable="false">@string/news_ten</string>

    <string name="section_all_label">All news</string>
    <string name="section_all" translatable="false">all</string>
    <string name="section_us_news_label">US News</string>
    <string name="section_us_news" translatable="false">us-news</string>
    <string name="section_world_label">World</string>
    <string name="section_world" translatable="false">world</string>
    <string name="section_sport_label">Sport</string>
    <string name="section_sport" translatable="false">sport</string>
    <string name="section_politics_label">Politics</string>
    <string name="section_politics" translatable="false">politics</string>
    <string name="section_culture_label">Culture</string>
    <string name="section_culture" translatable="false">culture</string>
    <string name="section_business_label">Business</string>
    <string name="section_business" translatable="false">business</string>
    <string name="section_lifeandstyle_label">Lifestyle</string>
    <string name="section_lifeandstyle" translatable="false">lifeandstyle</string>
    <string name="section_music_label">Music</string>
    <string name="section_music" translatable="false">music</string>
    <string name="section_technology_label">Tech</string>
    <string name="section_technology" translatable="false">technology</string>

    <string name="section_label">Section</string>
    <string name="section_key">section</string>
    <string name="section_default">@string/section_all</string>

</resources>
