<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:paddingTop="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#424242"
                android:text="@string/section"/>

            <TextView
                android:paddingTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#424242"
                android:text="@string/date"/>

            <TextView
                android:paddingTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#424242"
                android:text="@string/time"/>

            <TextView
                android:paddingTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#424242"
                android:text="@string/author"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#424242"/>

            <TextView
                android:id="@+id/date"
                android:paddingTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#424242"/>

            <TextView
                android:id="@+id/time"
                android:paddingTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#424242"/>

            <TextView
                android:id="@+id/author"
                android:paddingTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#424242"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>